--- a/src/app/newsfeed/newsfeed.component.html
+++ b/src/app/newsfeed/newsfeed.component.html
@@ -1,3 +1,8 @@
-<p>
-  newsfeed works because the news is for {{newsfeed}}
-</p>
+<h2>
+  {{news.title}}
+</h2>
+<div><span>Source: </span>{{news.source}}</div>
+<p>{{news.summary}}</p>
+<a href="https://{{news.link}}">More Details</a>
+
+
